--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,19 @@
 {
   "functions": {
     "app/api/**/*.ts": {
-      "maxDuration": 15
+      "maxDuration": 30
     }
   },
-  "regions": ["icn1"]
+  "regions": ["icn1"],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=60, stale-while-revalidate=300"
+        }
+      ]
+    }
+  ]
 }
