--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
+    "jose": "^6.1.0",
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
     "next-intl": "^3.23.5",
