fix: trustworthiness-test slug ?섏젙 諛?理쒖떊 ?뚯뒪??15媛??쒗븳, 諛고룷 ?먮룞???ㅽ겕由쏀듃 異붽?

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:new": "node scripts/deploy-new-test.js"
   },
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
